
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IPPROTO_SCTP ;
 int PF_INET ;
 int SCTP_STREAM ;
 int SOCK_STREAM ;
 int __fatal_errno (char*) ;
 int set_sctp_sock_opt (int,int ,int ) ;
 int socket (int ,int ,int ) ;

__attribute__((used)) static int create_and_init(void)
{
  int fd = socket(PF_INET, SOCK_STREAM, IPPROTO_SCTP);
  if(fd < 0)
    __fatal_errno("socket: sctp");
  set_sctp_sock_opt(fd, SCTP_STREAM, SCTP_STREAM);
  return fd;
}
